refactor(sql): move date aggregation inputs into connector
Move DateAggregationDates into the connector compiler IR as a qualifiable value
object. Rewire the legacy aggregation pipeline and cover filtering, query-step
qualification, selected bounds, and empty inputs with focused tests.

Co-authored-by: Codex GPT-5.6-sol <codex@openai.com>